# topic-modeling-clustering

./: .gitignore  README.md  custom_stopwords.txt  main.py  pyproject.toml
backend/: app.py  config.py
backend/api/: clustering.py  eda.py  gmm.py  precompute.py  routes.py  topics.py  visualization.py
backend/cache/: manager.py
backend/core/: clustering.py  data_loader.py  gmm.py  gmm_metrics.py  lda_trainer.py  metrics.py  projections.py  random_seed.py  text_preprocessor.py
backend/eda/: eda.ipynb
backend/models/: requests.py  responses.py
cache/clusters/: labels_k10_c10.npy  labels_k10_c11.npy  labels_k10_c12.npy  labels_k10_c13.npy  labels_k10_c14.npy  labels_k10_c15.npy  labels_k10_c2.npy  labels_k10_c3.npy  labels_k10_c4.npy  labels_k10_c5.npy  labels_k10_c6.npy  labels_k10_c7.npy  labels_k10_c8.npy  labels_k10_c9.npy  labels_k11_c10.npy  labels_k11_c11.npy  labels_k11_c12.npy  labels_k11_c13.npy  labels_k11_c14.npy  labels_k11_c15.npy  labels_k11_c2.npy  labels_k11_c3.npy  labels_k11_c4.npy  labels_k11_c5.npy  labels_k11_c6.npy  labels_k11_c7.npy  labels_k11_c8.npy  labels_k11_c9.npy  labels_k12_c10.npy  labels_k12_c11.npy  labels_k12_c12.npy  labels_k12_c13.npy  labels_k12_c14.npy  labels_k12_c15.npy  labels_k12_c2.npy  labels_k12_c3.npy  labels_k12_c4.npy  labels_k12_c5.npy  (+228 more)
frontend/: index.html  package.json
scripts/: eda.py  precompute.py
tests/: conftest.py  test_api_clustering.py  test_api_topics.py  test_api_visualization.py  test_cache_manager.py  test_clustering.py  test_data_loader.py  test_metrics.py  test_preprocessor.py
(+301 files in other folders)
