[project]
name = "topic-modeling-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contractions>=0.1.73",
    "fastapi>=0.122.0",
    "gensim>=4.4.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pyldavis>=3.4.1",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.11",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    "tqdm>=4.66.0",
    "umap-learn>=0.5.9.post2",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
